# OLAPService

./: CMakeLists.txt  run_client.cpp  run_server.cpp
backend/: CMakeLists.txt  main.cpp  run_client.cpp  run_server.cpp
backend/common/: json.cpp  json.h
backend/database/: Database.cpp  Database.h  Record.cpp  Record.h
backend/olap/: Cube.cpp  Cube.h  Measure.h
backend/server/: ChatMessage.cpp  ChatMessage.h  Client.cpp  Client.h  Server.cpp  Server.h
backend/service/: Aggregators.h  DiagramBuilder.cpp  DiagramBuilder.h  OLAPService.cpp  OLAPService.h  Requests.cpp  Requests.h  Types.cpp  Types.h
backend/storage/: records
data-generation/: records_generator.py
database/: Record.cpp  Record.h
front-end/: front_end_with_cli.py  front_end_with_gui.py
olap/: Cube.h
server/: ChatMessage.cpp  Client.cpp  Server.cpp
service/: DiagramBuilder.cpp  OLAPService.cpp
